fix overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,6 @@ body {
 main {
     background-color: var(--bg-color);
     margin-bottom: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,7 +41,6 @@ section {
     flex-direction: column;
     justify-content: center;
     max-width: 1600px;
-    width: 100%;
     min-height: 100vh;
     .section-title {
         padding: 40px;
@@ -73,6 +71,7 @@ section {
 }
 
 .banner {
+    width: calc(100% - 200px);
     position: relative;
     flex-direction: row;
     justify-content: space-between;
@@ -283,7 +282,7 @@ section {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 100%;
+    width: 100vw;
     justify-content: center;
     align-items: center;
     .section-content {
@@ -294,6 +293,7 @@ section {
         min-height: 350px;
         flex: 0;
         background-color: var(--bg-color-2);
+        gap: 30px;
     }
     .text {
         flex: 1;
@@ -344,6 +344,9 @@ section {
 }
 
 @media screen and (max-width:700px) {
+    .section-content {
+        padding: 0 20px;
+    }
     .banner {
         flex-direction: column;
         justify-content: space-around;
@@ -363,7 +366,15 @@ section {
             padding: 10px 20px;
         }
     }
-    .contact .section-content {
-        width: calc(100% - 100px);
+    .contact {
+        overflow: hidden;
+        .section-content {
+            width: calc(100% - 100px);
+            flex-direction: column;
+            .image {
+                width: 50%;
+                transform: translateX(100%);
+            }
+        }
     }
 }
